# rust-web-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2023-07-09-103328_create_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs
src/routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
